--- a/API/package.json
+++ b/API/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^5.8.1"
   }
 }
