--- a/API/package.json
+++ b/API/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "@types/jsonwebtoken": "^9.0.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.8.1"
   }
 }
