--- a/API/package.json
+++ b/API/package.json
@@ -20,7 +20,9 @@
     "@types/jsonwebtoken": "^9.0.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.8.1"
+    "prisma": "^5.8.1",
+    "zod": "^3.22.4"
   }
 }
